--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body bgcolor="grey">
+    <h1 style="color: rgb(40, 40, 196);">Hello, World!</h1>
+    
+</body>
+</html>
